--- a/Frontend-Project-Structure/src/components/ui/backbutton/BackButton.css
+++ b/Frontend-Project-Structure/src/components/ui/backbutton/BackButton.css
@@ -21,7 +21,7 @@
 }
 
 .ui-back-button:hover {
-  color: #007bff; /* Cambia a azul al pasar el mouse */
+  color: #3921f2; /* Cambia a azul al pasar el mouse */
 }
 
 /* El ícono hereda el color del botón */
