--- a/Frontend-Project-Structure/src/pages/ResetPasswordPage/ResetPasswordPage.css
+++ b/Frontend-Project-Structure/src/pages/ResetPasswordPage/ResetPasswordPage.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #e0eafc 20%, #5eb4f2 80%);
+  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%,#5d49f5 90%);
   padding: 25px;
   box-sizing: border-box;
 }
