--- a/Frontend-Project-Structure/src/pages/RegisterPage/RegisterPage.css
+++ b/Frontend-Project-Structure/src/pages/RegisterPage/RegisterPage.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   min-height: 100vh; 
-  background: linear-gradient(135deg, #e0eafc 20%, #5eb4f2 80%);
+  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%,#5d49f5 90%);
   padding: 20px;
   box-sizing: border-box; 
 }
