--- a/Frontend-Project-Structure/src/features/auth/LoginForm.css
+++ b/Frontend-Project-Structure/src/features/auth/LoginForm.css
@@ -1,4 +1,3 @@
-/* Estilos específicos para el componente LoginForm */
 .login-form-box {
   background-color: white;
   padding: 40px;
@@ -45,7 +44,6 @@
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Efecto visual cuando el usuario hace clic en un campo de texto */
 .input-group input:focus {
   outline: none;
   border-color: #3921f2;
@@ -90,12 +88,11 @@
 }
 
 .login-links a {
-  color: #3921f2; /* 1. Usamos tu nuevo color primario */
+  color: #3921f2; 
   text-decoration: none;
   
 }
 
-/* 2. Forzamos el color para que NUNCA cambie a morado */
 .login-links a:visited {
   color: #3921f2;
 }
@@ -103,5 +100,16 @@
 .login-links a:hover {
   opacity: 0.7;
   text-decoration: underline;
+}
+
+.form-error-message {
+  color: #e74c3c; /* Un rojo claro */
+  background-color: #fbeae8; /* Un fondo rosado muy suave */
+  border: 1px solid #e74c3c;
+  padding: 0.75rem;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 0.9rem;
+  margin-bottom: 0; /* Ya tenemos gap en el form */
 }
 
