--- a/Frontend-Project-Structure/src/features/ForgotPasswordForm/ForgotPasswordForm.css
+++ b/Frontend-Project-Structure/src/features/ForgotPasswordForm/ForgotPasswordForm.css
@@ -5,9 +5,11 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 450px;
-  height: 60vh;
+  height: auto;
+  /* Dejar que el contenido defina la altura */
+  min-height: auto;
   text-align: center;
-  position: relative; 
+  position: relative;
 }
 
 .forgot-password-form-box h2 {
