--- a/Frontend-Project-Structure/src/pages/ForgotPasswordPage/ForgotPasswordPage.css
+++ b/Frontend-Project-Structure/src/pages/ForgotPasswordPage/ForgotPasswordPage.css
@@ -4,7 +4,12 @@
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%,#5d49f5 90%);
+  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%, #5d49f5 90%);
   box-sizing: border-box;
 }
 
+@media (max-width: 768px) {
+  .forgot-password-page-container {
+    padding: 1rem;
+  }
+}
