--- a/Frontend-Project-Structure/src/pages/RegisterPage/RegisterPage.css
+++ b/Frontend-Project-Structure/src/pages/RegisterPage/RegisterPage.css
@@ -3,8 +3,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 100vh; 
-  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%,#5d49f5 90%);
+  min-height: 100vh;
+  background: linear-gradient(135deg, #e0eafc 0%, #988cf0 40%, #5d49f5 90%);
   padding: 20px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .register-page-container {
+    padding: 1rem;
+  }
 }
